# rVRRPd

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
conf/: rvrrpd.conf  rvrrpd.conf.local  rvrrpd.json.conf  rvrrpd.local.conf
docs/: conf.py  index.rst
docs/api/: config.rst  examples.rst  intro.rst  reference.rst
docs/config/: install.rst  intro.rst  reference.rst
examples/client-api/: authentication
src/: arp.rs  auth.rs  checksums.rs  config.rs  constants.rs  debug.rs  fsm.rs  lib.rs  linux_netdev.rs  packets.rs  protocols.rs  threads.rs  timers.rs  vrouter.rs
src/api/: mod.rs
src/api/client/: mod.rs
src/api/client/router/: mod.rs
src/api/client/router/handlers/: mod.rs
src/api/client/router/handlers/auth/: mod.rs
src/api/client/router/handlers/config/: mod.rs
src/api/client/router/handlers/config/global/: mod.rs
src/api/client/router/handlers/config/protocols/: mod.rs
src/api/client/router/handlers/config/vrouter/: mod.rs
src/api/client/router/handlers/run/: mod.rs
src/api/client/router/handlers/run/global/: mod.rs
src/api/client/router/handlers/run/protocols/: mod.rs
src/api/client/router/handlers/run/vrrp/: mod.rs
src/api/client/sessions/: auth.rs  mod.rs  token.rs
src/os/: drivers.rs  mod.rs
src/os/freebsd/: arp.rs  bpf.rs  constants.rs  libc.rs  mod.rs  netinet.rs
src/os/linux/: arp.rs  drivers.rs  filter.rs  libc.rs  libnl.rs  mod.rs  netdev.rs
src/os/multi/: libc.rs  mod.rs
utils/rvrrpd-pw/: .gitignore  Cargo.toml  Makefile
utils/rvrrpd-pw/src/: main.rs
