[package]
name = "rVRRPd"
version = "0.1.0"
authors = ["Nicolas Chabbey <eprom@toor.si>"]
edition = "2018"
repository = "httsp://github.com/e3prom/rvrrpd"
description = "An open and secure VRRPv2 implementation written in Rust"
license = "GPL-3.0"
publish = false

[dependencies]
getopts = "0.2"
libc = "0.2.51"
nix = "0.14.0"
ctrlc = { version = "3.1", features = ["termination"] }
byteorder = "1"
itertools = "0.8.0"
foreign-types = "0.4.0"
futures = "0.1"
tokio = "0.1"
serde = "1.0.91"
serde_derive = "1.0.91"
toml = "0.5"
daemonize = "0.4.1"
chrono = "0.4.6"
hmac = "0.7"
sha2 = "0.8"
sha3 = "0.8"
