[package]
name = "rVRRPd"
version = "0.1.3"
authors = ["Nicolas Chabbey <eprom@toor.si>"]
edition = "2018"
repository = "httsp://github.com/e3prom/rvrrpd"
homepage = "https://github.com/e3prom/rVRRPd"
readme = "README.md"
description = "A fast, multi-platform and highly secure VRRP daemon."
license = "GPL-3.0"
publish = false

[badges]
github-actions = { repository = "e3prom/rVRRPd", workflow = "Build"}

[dependencies]
rand = "0.7"
getopts = "0.2"
libc = "0.2.51"
nix = "0.15"
ctrlc = { version = "3.1", features = ["termination"] }
byteorder = "1"
itertools = "0.8.0"
foreign-types = "0.4.0"
futures = "0.1"
tokio = "0.1"
tokio-openssl = "0.3"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
toml = "0.5"
daemonize = "0.4.1"
openssl = "0.10"
chrono = "0.4.6"
hmac = "0.7"
sha2 = "0.8"
sha3 = "0.8"
scrypt = "0.2"
crossbeam = "0.7"
gotham = { git = "https://github.com/gotham-rs/gotham", rev= "22e68d5f" }
gotham_derive = "0.4.0"
hyper = "0.12"
mime = "0.3.14"
cookie = "0.12"
regex = "1"
lazy_static = "1.4"
failure = "0.1"